<resources>
    <string name="app_name">RAZVOJ PROGRAMSKIH SISTEMOV</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_schedule">Enter your schedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="submit">Submit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="calendar">Calendar</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="add_subject">Add subject</string>
    <string name="subjects">Subjects</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email address</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="default_value">DEFAULT VALUE</string>
    <string name="date">Date</string>
    <string name="assigned_subjects">Assigned Subjects</string>
    <string name="note">Note</string>
    <string name="my_note">My note</string>
</resources>