<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/calendar" />

    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/user" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/feedback"/>
            </group>
        </menu>
    </item>

</menu>