<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/monday_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/day_background"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tuesday_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/day_background"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/wednesday_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/day_background"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/thursday_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/day_background"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/friday_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:background="@drawable/day_background"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="18sp"
            android:background="@drawable/submit_button_background"
            android:textColor="@android:color/white" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>