<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/image_user_photo"
        android:layout_width="101dp"
        android:layout_height="88dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/default_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/first_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_user_photo" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_label" />

    <TextView
        android:id="@+id/text_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_surname_label" />

    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_address"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_surname"
        app:layout_constraintTop_toBottomOf="@+id/edit_surname" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email_label" />

    <TextView
        android:id="@+id/text_subject_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/subjects"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_user" />

    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="text"
        android:hint="@string/enter_your_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subject_label" />

    <Button
        android:id="@+id/btn_add_subject"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/button_style"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/edit_subject"
        app:layout_constraintTop_toBottomOf="@+id/edit_subject" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subjectRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="@+id/text_subject_display"
        app:layout_constraintStart_toStartOf="@+id/text_subject_display"
        app:layout_constraintTop_toBottomOf="@+id/edit_subject" />

    <TextView
        android:id="@+id/text_subject_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_subject" />

    <Button
        android:id="@+id/btn_change_user"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />


</androidx.constraintlayout.widget.ConstraintLayout>